--- a/src/index.css
+++ b/src/index.css
@@ -2,18 +2,18 @@ body {
   overflow: auto;
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 .hidescroll {
-  overflow: hidden!important;
+  overflow: hidden !important;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 ::-webkit-scrollbar {
@@ -29,13 +29,13 @@ code {
   background: rgba(0, 0, 0, 0.2);
 }
 .display {
-  opacity: 1!important;
+  opacity: 1 !important;
 }
 .container {
   width: auto;
   max-width: 1300px;
-  padding-right: var(--bs-gutter-x,.75rem);
-  padding-left: var(--bs-gutter-x,.75rem);
+  padding-right: var(--bs-gutter-x, 0.75rem);
+  padding-left: var(--bs-gutter-x, 0.75rem);
   margin-right: auto;
   margin-left: auto;
 }
@@ -62,11 +62,11 @@ code {
   font-size: 20px;
   border-radius: 5px;
   text-decoration: none;
-  color:white;
+  color: white;
   font-weight: 500;
   z-index: 1;
   background-color: #01bf71;
-  padding:  10px 50px;
+  padding: 10px 50px;
   margin: 0 0.5rem;
 }
 
@@ -77,44 +77,42 @@ code {
   width: 49.9%;
 }
 .col-md-3 {
-  margin: 0 1rem!important;
-  width:100%;
+  margin: 0 1rem !important;
+  width: 100%;
 }
 
 .col-md-4 {
-  width:33.3%;
+  width: 33.3%;
 }
 .col-md-4:first-child {
   margin-right: 1rem;
-
 }
 .col-md-4:last-child {
   margin-left: 1rem;
-
 }
 
 .x {
-  margin: 0rem 1rem!important;
-  width:33.3%;
+  margin: 0rem 1rem !important;
+  width: 33.3%;
 }
 /* Navbar */
 .navopened {
-  background-color: #010606!important;
+  background-color: #010606 !important;
 }
 .navopened .logo {
-  color: #fafafa!important;
+  color: #fafafa !important;
 }
 .navopened ul li a {
-  color: #fafafa!important;
+  color: #fafafa !important;
 }
 .navopened .burger {
-  background-color: #010606!important;
+  background-color: #010606 !important;
 }
 .navbar {
   transition: background-color 0.4s;
   position: fixed;
   top: 0;
-  width: 100% ;
+  width: 100%;
   padding: 0.5rem;
   background-color: transparent;
   z-index: 2;
@@ -132,7 +130,7 @@ code {
   font-size: 28px;
   padding-top: 10px;
 }
-.navbar ul { 
+.navbar ul {
   transition: all 0.2s;
 
   margin-left: 17rem;
@@ -150,13 +148,12 @@ code {
   text-decoration: none;
   color: rgb(243, 243, 243);
   font-weight: 500;
-
 }
 .button {
   cursor: pointer;
   transition: transform 0.2s linear;
   position: fixed;
-  transform:translateX(300%);
+  transform: translateX(300%);
   top: 20px;
   right: 15px;
   z-index: 1;
@@ -187,7 +184,6 @@ video {
   top: 0;
   background-color: black;
   opacity: 0.7;
-
 }
 header {
   height: 100vh;
@@ -204,7 +200,7 @@ header h1 {
   font-size: 64px;
 }
 .opened {
-  transform: translateX(0%)!important;
+  transform: translateX(0%) !important;
 }
 /* main */
 .main-title {
@@ -236,21 +232,20 @@ main {
   margin-top: 2.5px;
 
   font-size: 18px;
-  color:#919191;
+  color: #919191;
 }
 footer {
   width: 100%;
   height: auto;
   margin: 0;
   padding: 1rem 0;
-  background-color:#010606;
+  background-color: #010606;
 }
 .side1 {
   width: 50%;
 }
 .side2 {
   width: 50%;
-
 }
 footer .col-md-3 {
   height: 100%;
@@ -266,17 +261,16 @@ footer .logo {
 
   font-size: 28px;
 }
-.logo a{
+.logo a {
   text-decoration: none;
   color: #fafafa;
-  
 }
 .footer-title {
   color: #fafafa;
   font-weight: 600;
   font-size: 22px;
   margin-bottom: 0;
-  word-wrap:initial;
+  word-wrap: initial;
 }
 footer ul {
   list-style: none;
@@ -305,7 +299,6 @@ footer ul li a {
   color: white;
   bottom: 20px;
   right: 15px;
-  
 }
 /* Services */
 .card-title {
@@ -319,7 +312,6 @@ footer ul li a {
   padding: 0rem 0rem 1rem 0rem;
   font-weight: 500;
   font-size: 18px;
-
 }
 
 .card {
@@ -329,15 +321,14 @@ footer ul li a {
   transition: all 0.2s;
   background-color: white;
   box-shadow: 5px 5px 5px 5px #e5e5e5;
+  text-align: center;
 }
 .card:hover {
-  transform:scale(1.03);
+  transform: scale(1.03);
 }
 
 .services .col-md-4 {
   margin: 1rem 1rem 1rem 1rem;
-
-
 }
 ul li a {
   cursor: pointer;
@@ -353,11 +344,11 @@ ul li a {
 }
 .s {
   width: 100%;
-  margin: 0 1rem!important;
+  margin: 0 1rem !important;
 }
 
 .contact-input {
-  color:white;
+  color: white;
   border-radius: 5px;
   padding: 15px 0px 10px 5px;
   font-size: 20px;
@@ -365,7 +356,6 @@ ul li a {
   outline: 0;
   border: 0;
   background-color: rgba(0, 0, 0, 0.76);
-
 }
 .form-btn {
   border: 0;
@@ -384,13 +374,13 @@ ul li a {
   transition: background-color 0.2s;
 }
 .contact-textarea {
-  color:white;
+  color: white;
   border-radius: 5px;
   padding: 15px 0px 10px 5px;
   font-size: 20px;
-  width: 100%!important;
-  min-width: 100%!important;
-  max-width: 100%!important;
+  width: 100% !important;
+  min-width: 100% !important;
+  max-width: 100% !important;
   height: 300px;
   min-height: 300px;
   max-height: 600px;
@@ -398,7 +388,6 @@ ul li a {
   outline: 0;
   border: 0;
   background-color: rgba(0, 0, 0, 0.76);
-
 }
 
 @media (max-width: 1300px) {
@@ -427,51 +416,44 @@ ul li a {
   .side2 .row {
     display: inline-block;
     width: 100%;
-
   }
 }
 
-@media (max-width: 768px) { 
+@media (max-width: 768px) {
   header h1 {
     text-align: center;
-    font-size: 44px!important;
+    font-size: 44px !important;
   }
   .container {
     max-width: 720px;
   }
-  .navbar ul { 
+  .navbar ul {
     margin-left: 0rem;
     list-style: none;
   }
   .col-md-4 {
-    width: 55.9%!important;
+    width: 55.9% !important;
   }
-
 }
-@media (max-width: 576px) { 
+@media (max-width: 576px) {
   .col-md-4:first-child {
     margin-right: 0;
-  
   }
   .col-md-4:last-child {
     margin-left: 0;
-  
   }
   .services .col-md-4 {
-    margin: 2rem auto!important;
-    width: 87.9%!important;
-
+    margin: 2rem auto !important;
+    width: 87.9% !important;
   }
   .col-md-4 {
-    
-    width: 100%!important;
+    width: 100% !important;
   }
   .contact .col-md-4 {
-    
-    margin: none!important;
-    }
+    margin: none !important;
+  }
   .col-md-3 {
-    margin: 0!important;
+    margin: 0 !important;
   }
 
   footer .row {
@@ -482,43 +464,37 @@ ul li a {
   }
   .side2 {
     width: 100%;
-  
   }
-   .navopened ul {
-    top: 55px!important;
-
-   }
+  .navopened ul {
+    top: 55px !important;
+  }
   .navopened {
-    background-color: #010606!important;
+    background-color: #010606 !important;
   }
   .navopened .logo {
-    color: #fafafa!important;
+    color: #fafafa !important;
   }
   .navopened ul li a {
-    color: #010606!important;
+    color: #010606 !important;
   }
   .navopened .burger {
-    background-color: #fafafa!important;
+    background-color: #fafafa !important;
   }
   .container {
     width: auto;
   }
   header h1 {
-
     font-size: 44px;
   }
   .btn {
-
-    padding:  10px 30px;
-
+    padding: 10px 30px;
   }
   .container {
-      max-width: 540px; 
+    max-width: 540px;
   }
 
   .button {
-    transform:translateX(0);
-
+    transform: translateX(0);
   }
 
   .navbar .logo {
@@ -534,7 +510,7 @@ ul li a {
     backdrop-filter: none;
     padding: 10px 0;
   }
-  .navbar ul { 
+  .navbar ul {
     backdrop-filter: blur(20px);
 
     z-index: -1;
@@ -556,12 +532,11 @@ ul li a {
     display: block;
   }
   .navbar ul li a {
-      cursor: pointer;
+    cursor: pointer;
     font-size: 20px;
     text-decoration: none;
     color: #fafafa;
     font-weight: 500;
-  
   }
   .col-md-6 {
     width: 100%;
@@ -572,8 +547,12 @@ ul li a {
 }
 
 .mb-2 {
-  margin-bottom: 2rem!important;
+  margin-bottom: 2rem !important;
 }
 .mb-1 {
-  margin-bottom: 1rem!important;
+  margin-bottom: 1rem !important;
+}
+.small-img {
+  max-width: 10%; /* Adjust this value as needed */
+  height: auto; /* Maintain aspect ratio */
 }
